--- a/work2.html
+++ b/work2.html
@@ -20,13 +20,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Aliyah Chavez</a>
+						<a href="index.html" class="logo">AliyahjChavez.com</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">About</a></li>
+							<li><a href="index.html#header">About</a></li>
 							<li class="active"><a href="work.html">My Work</a></li>
 							<li><a href="experience.html">Experience and Skills</a></li>
 							<li><a href="recognition.html">Recognition</a></li>
