--- a/work3.html
+++ b/work3.html
@@ -51,7 +51,9 @@
 							</section>
 
 						<!-- Posts -->
-							<section class="posts">
+							<section class="module">
+
+
 								<!-- Daily, Nainoa Thompson -->
 								<article>
 									<!-- <header>
@@ -193,7 +195,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Aliyah Chavez</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li><li>Author: <a href="https://kathrynbunner.com">KBunner</a></li></ul>
+						<ul><li>&copy; Aliyah Chavez</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li><li>Dev: <a href="https://www.linkedin.com/in/kathryn-bunner/">KBunner</a></li></ul>
 					</div>
 
 			</div>
@@ -201,6 +203,7 @@
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrollup.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
