--- a/experience.html
+++ b/experience.html
@@ -63,7 +63,7 @@
 							</section>
 
 						<!-- Posts -->
-							<section class="resume">
+							<section class="module">
 								<article>
 									<span class="image right"><img src="images/experience_images/press_badge.jpg" alt=""/></span>
 									<h3>Reporter</h3>
@@ -205,7 +205,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Aliyah Chavez</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li><li>Author: <a href="https://kathrynbunner.com">KBunner</a></li></ul>
+						<ul><li>&copy; Aliyah Chavez</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li><li>Dev: <a href="https://www.linkedin.com/in/kathryn-bunner/">KBunner</a></li></ul>
 					</div>
 
 			</div>
@@ -213,6 +213,7 @@
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrollup.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
