--- a/work.html
+++ b/work.html
@@ -193,7 +193,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Aliyah Chavez</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li><li>Author: <a href="https://kathrynbunner.com">KBunner</a></li></ul>
+						<ul><li>&copy; Aliyah Chavez</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li><li>Dev: <a href="https://www.linkedin.com/in/kathryn-bunner/">KBunner</a></li></ul>
 					</div>
 
 			</div>
