added accomplishment, all links open in new tab, updated footer

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!-- <section>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -95,19 +95,17 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
+						</section> -->
+						<section>
+							<section class="alt">
+								<h2>Thanks for visiting!</h2>
+								<a href="#" class="image foot"><img src="images/portrait.jpg" alt="" /></a>
+							</section>
 						</section>
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
 								<p>Phoenix, AZ</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -117,6 +115,10 @@
 									<li><a href="https://www.linkedin.com/in/aliyah-j-chavez-13b295133/" class="icon brands fa-linkedin"><span class="label" target="_blank">LinkedIn</span></a></li>
 									<li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
 								</ul>
+							</section>
+							<section>
+								<h3>Email</h3>
+								<p><a href="#">ajc@aliyahjchavez.com</a></p>
 							</section>
 						</section>
 					</footer>
