--- a/work3.html
+++ b/work3.html
@@ -147,46 +147,19 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
 								<p>Phoenix, AZ</p>
 							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
+						</section>
+						<section class="split contact">
+							<section class="alt">
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://twitter.com/AliyahJChavez" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.instagram.com/aliyahjchavez/" class="icon brands fa-instagram"><span class="label" target="_blank">Instagram</span></a></li>
-									<li><a href="https://www.linkedin.com/in/aliyah-j-chavez-13b295133/" class="icon brands fa-linkedin"><span class="label" target="_blank">LinkedIn</span></a></li>
+									<li><a href="https://www.instagram.com/aliyahjchavez/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.linkedin.com/in/aliyah-j-chavez-13b295133/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
 								</ul>
 							</section>
