updated deck line of about

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About</h2>
-									<h3><i>Aliyah Chavez is a multimedia journalist passionate about the </br>intersection of Indigenous communities and news. <br/>
-									She is a gifted storyteller and skilled in broadcast, digital media, and reporting. </i> </h3>
+									<h3><i>I am a multimedia journalist with a dedication to telling important stories. </br>I am a proud member of Kewa Pueblo, one of the 21 Indigenous nations in New Mexico. </br>
+									Much of my inspiration stems from growing up in the Pueblo, a place where Native people are largely underrepresented in all forms of media.  </i> </h3>
 								</header>
 								<!-- <ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
