deck and bio updated

--- a/index.html
+++ b/index.html
@@ -57,17 +57,19 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About</h2>
-									<h3><i>I am a multimedia journalist with a dedication to telling important stories. </br>I am a proud member of Kewa Pueblo, one of the 21 Indigenous nations in New Mexico. </br>
-									Much of my inspiration stems from growing up in the Pueblo, a place where Native people are largely underrepresented in all forms of media.  </i> </h3>
+									<h3><i>I am a multimedia journalist with a dedication to telling important stories.  </i> </h3>
 								</header>
 								<!-- <ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul> -->
 								
-								<p>Chavez is a member of the Kewa Pueblo and is passionate about her Native American heritage. Much of her inspiration stems from growing up on the Kewa Pueblo tribal reservation in New Mexico– a place where Native people are largely underrepresented in all forms of media. <br/><br/>
-								Currently, Aliyah is currently using her passions for reporting the news and drawing attention to the issues of indigenous communities as a journalist for Indian Country Today in Phoenix, AZ. She works on a PBS program for Native American peoples created by Native American journalists. She has interned and worked freelance for Indian Country Today in the past, covering, for instance, an Indigenous Peoples Day event on Alcatraz Island and the mid-term congressional elections. Previously, she has completed internships with the U.S. Department of Interior, NBC’s TODAY show, and the West Valley View in Phoenix. <br/><br/>
+								<p>I am a proud member of Kewa Pueblo, one of the 21 Indigenous nations in New Mexico. Much of my inspiration stems from growing up in the Pueblo, a place where Native people are largely underrepresented in all forms of media. </br></br>
 
-								Chavez graduated from Stanford University in 2019 with an M.A. in Journalism. She also received a B.A. in Communication and the Comparative Studies in Race and Ethnicity from Stanford in 2018. At Stanford, she was involved in the Native American community, holding leadership positions with Powwow and the Stanford American Indian Organization and was on the varisity cheerleading team. She is also a member of the Native American Journalists Association. In her free time, she enjoys all things fitness, playing with her young siblings and cheering for the Stanford Cardinal.</p>
+								Currently, I am a reporter and producer at Indian Country Today in Phoenix, Arizona. We are a digital news platform that covers news happening in Indigenous communities around the country. In the fall, we will be launching a television news show where I will continue my reporting. Previously, I have worked in national newsrooms including the Peninsula Press, the West Valley View, and NBC’s Today show. <br/><br/>
+
+								I graduated from Stanford University in 2019 with an M.A. in Journalism and a B.A. in Communication and the Comparative Studies in Race and Ethnicity. At Stanford, I was an active member of the Native American community, holding leadership positions with the powwow and Stanford American Indian Organization. I was also a member of the Stanford varsity cheerleading team where I cheered at various bowl games and NCAA postseason tournaments. I am a member of the Native American Journalists Association.  <br/><br/>
+
+								In my free time, I enjoy all things fitness and spending time with my family and loved ones.</p>
 								<!-- <a href="#" class="image main"><img src="images/cover_6.png" alt="" /></a> -->
 							</article>
 
