updates to header and recognition

--- a/recognition.html
+++ b/recognition.html
@@ -35,7 +35,7 @@
 							<li><a href="https://twitter.com/AliyahJChavez" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/aliyahjchavez/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 							<li><a href="https://www.linkedin.com/in/aliyah-j-chavez-13b295133/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+							<!-- <li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li> -->
 						</ul>
 					</nav>
 
@@ -57,7 +57,7 @@
 									<ul class="icons">
 										<a class="icon major style6 fa-graduation-cap"></a>
 									</ul>
-									<h3>2x graduate of Stanford University</br> <i>Spring 2019</i></h3>
+									<h3>Graduate of Stanford University</br> <i>Spring 2019</i></h3>
 									<p>Graduated from Stanford University in California with a Master of Arts in Journalism, as well as a Bachelor of Arts in Communication and the Comparative Studies in Race and Ethnicity.</p>
 								</article>
 								<article>
@@ -90,12 +90,26 @@
 								</article>
 								<article>
 									<ul class="icons">
-										<a class="icon major style5 fa-bullhorn"></a>
+										<a class="icon major style5 fa-video"></a>
 									</ul>
-									<h3>Stanford Cheer Team</br> <i>Spring 2017</i></h3>
-									<p>Selected as a member of Stanford's varsity cheerleading squar.</p>
+									<h3>Selected reporter for first-ever Native Election night.</br> <i>Fall 2018</i></h3>
+									<p>Worked as part of a team that produced a 5-hour live television broadcast on election night to highlight the record number of Native Americans who ran for office.</p>
 								</article>
 								<article>
+									<ul class="icons">
+										<a class="icon major style1 fa-bullhorn"></a>
+									</ul>
+									<h3>Stanford Cheer Team</br> <i>Spring 2017</i></h3>
+									<p>Selected as a member of Stanford's varsity cheerleading squad.</p>
+								</article>
+								<article>
+									<ul class="icons">
+										<a class="icon major style3 fa-video"></a>
+									</ul>
+									<h3>Today Show Extra</br> <i>Summer 2017</i></h3>
+									<p>Selected by Today Show producers to be an extra on four segments aired nationwide.</p>
+								</article>
+								<!-- <article>
 									<ul class="icons">
 										<a href="https://twitter.com/AliyahJChavez/status/696611481345888256" target="_blank" class="icon major style1 fa-video"></a>
 									</ul>
@@ -108,17 +122,17 @@
 									</ul>
 									<h3><a href="http://www.mtv.com/news/2270448/teen-social-media-activists/" target="_blank">Named one of MTV's 8 Inspiring Teens Using Social Media to Change the World.</br> <i>Fall 2015</i></a></h3>
 									<p>Recognized by MTV for my <a href="http://www.mtv.com/news/2345279/indigenous-woman-columbus-day/" target="_blank">article</a> on indigenous resillence, specifically how it pertains to Indigenous People's Day.</p>
-								</article>
+								</article> -->
 								<article>
 									<ul class="icons">
-										<a class="icon major style3 fa-map"></a>
+										<a class="icon major style6 fa-map"></a>
 									</ul>
 									<h3>Stanford Alternative Spring Break</br> <i>Spring 2015</i></h3>
 									<p>Traveled with a small group of students to the Rosebud Reservation in rural South Dakota to learn from teachers, doctors, tribal leaders and cultural practitioners about Indigenous Ways of Knowing by exploring the Lakota Narrative. </p>
 								</article>
 								<article>
 									<ul class="icons">
-										<a class="icon major style5 fa-star"></a>
+										<a class="icon major style2 fa-star"></a>
 									</ul>
 									<h3>Gates Millenium Scholar </br> <i>Spring 2014</i></h3>
 									<p>Recipient of competitive scholarship program designed to promote academic excellence and to provide an opportunity for outstanding minority students to reach their highest potential through reducing financial barriers and developing future leaders. </p>
@@ -156,7 +170,7 @@
 									<li><a href="https://twitter.com/AliyahJChavez" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.instagram.com/aliyahjchavez/" class="icon brands fa-instagram"><span class="label" target="_blank">Instagram</span></a></li>
 									<li><a href="https://www.linkedin.com/in/aliyah-j-chavez-13b295133/" class="icon brands fa-linkedin"><span class="label" target="_blank">LinkedIn</span></a></li>
-									<li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+									<!-- <li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li> -->
 								</ul>
 							</section>
 						</section>
