--- a/experience.html
+++ b/experience.html
@@ -35,7 +35,7 @@
 							<li><a href="https://twitter.com/AliyahJChavez" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/aliyahjchavez/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 							<li><a href="https://www.linkedin.com/in/aliyah-j-chavez-13b295133/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+							<!-- <li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li> -->
 						</ul>
 					</nav>
 
@@ -170,7 +170,7 @@
 									<li><a href="https://twitter.com/AliyahJChavez" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.instagram.com/aliyahjchavez/" class="icon brands fa-instagram"><span class="label" target="_blank">Instagram</span></a></li>
 									<li><a href="https://www.linkedin.com/in/aliyah-j-chavez-13b295133/" class="icon brands fa-linkedin"><span class="label" target="_blank">LinkedIn</span></a></li>
-									<li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+									<!-- <li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li> -->
 								</ul>
 							</section>
 						</section>
