--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="hero-image">
 					<div id="intro">
 						<h1>ALIYAH </br>CHAVEZ</h1>
-						<p>Native reporter from Kewa Pueblo, NM</br> dedicated to telling important stories.</p>
+						<p>Native reporter from Kewa Pueblo, NM</br> dedicated to telling important stories</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -46,7 +46,7 @@
 							<li><a href="https://twitter.com/AliyahJChavez" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/aliyahjchavez/" class="icon brands fa-instagram"><span class="label" target="_blank">Instagram</span></a></li>
 							<li><a href="https://www.linkedin.com/in/aliyah-j-chavez-13b295133/" class="icon brands fa-linkedin"><span class="label" target="_blank">LinkedIn</span></a></li>
-							<li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+							<!-- <li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li> -->
 						</ul>
 					</nav>
 
@@ -115,12 +115,12 @@
 									<li><a href="https://twitter.com/AliyahJChavez" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.instagram.com/aliyahjchavez/" class="icon brands fa-instagram"><span class="label" target="_blank">Instagram</span></a></li>
 									<li><a href="https://www.linkedin.com/in/aliyah-j-chavez-13b295133/" class="icon brands fa-linkedin"><span class="label" target="_blank">LinkedIn</span></a></li>
-									<li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+									<!-- <li><a href="https://www.facebook.com/aliyahjade" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li> -->
 								</ul>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">ajc@aliyahjchavez.com</a></p>
+								<p><a href="#">achavez@indiancountrytoday.com</a></p>
 							</section>
 						</section>
 					</footer>
