--- a/recognition.html
+++ b/recognition.html
@@ -92,7 +92,7 @@
 									<ul class="icons">
 										<a class="icon major style5 fa-video"></a>
 									</ul>
-									<h3>Selected reporter for first-ever Native Election night.</br> <i>Fall 2018</i></h3>
+									<h3><a href="https://newsmaven.io/indiancountrytoday/news/recap-broadcast-of-native-election-night-live-Zpht9iWqdE6SMLDjH6jpTw/" target="_blank">Selected reporter for first-ever Native Election night.</br> <i>Fall 2018</i></a></h3>
 									<p>Worked as part of a team that produced a 5-hour live television broadcast on election night to highlight the record number of Native Americans who ran for office.</p>
 								</article>
 								<article>
@@ -106,7 +106,7 @@
 									<ul class="icons">
 										<a class="icon major style3 fa-video"></a>
 									</ul>
-									<h3>Today Show Extra</br> <i>Summer 2017</i></h3>
+									<h3><a href="https://www.today.com/video/makeup-magic-for-glam-night-out-plum-smoky-eye-and-more-1032376899553" target="_blank">Today Show Extra</br> <i>Summer 2017</i></a></h3>
 									<p>Selected by Today Show producers to be an extra on four segments aired nationwide.</p>
 								</article>
 								<!-- <article>
