--- a/work.html
+++ b/work.html
@@ -53,81 +53,81 @@
 
 						<!-- Posts -->
 							<section class="posts">
-								<!-- ICT, Iowa Powwow -->
+								<!-- ICT, Castro Gracias -->
 								<article>
 									<header>
-										<span class="date">August 12, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/iowa-s-powwow-trail-had-a-campaign-stop-GSowHA4SjUy3zPbHWWNsAw/"  target="_blank">Iowa's powwow trail had a campaign stop</a></h3>
+										<span class="date">August 21, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank">Julián Castro has specific plans for Indian Country & a 'gracias' for warm welcome</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/iowa-s-powwow-trail-had-a-campaign-stop-GSowHA4SjUy3zPbHWWNsAw/"  target="_blank" class="image fit"><img src="images/work_images/ict_iowa.jpg" alt="" /></a>
-									<p>Three presidential candidates reached out to powwow goers Saturday and talked about tribal sovereignty, reparations and removing Andrew Jackson from the White House's Oval Office.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank" class="image fit"><img src="images/work_images/ict_castro_language.jpg" alt="" /></a>
+									<p>A recurring theme of the Frank LaMere Native American Presidential Forum was language. Indian Country listened as panelists spoke various languages before they asked questions to White House hopefuls.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/iowa-s-powwow-trail-had-a-campaign-stop-GSowHA4SjUy3zPbHWWNsAw/"  target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 
-								<!-- ICT, Gabbard -->
+								<!-- ICT, Sestak -->
 								<article>
 									<header>
-										<span class="date">August 2, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank">Tulsi Gabbard says Americans need to address 'broken treaties and broken promises'</a></h3>
+										<span class="date">August 20, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank">Joe Sestak kicks off day two of the Presidential Forum</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank" class="image fit"><img src="images/work_images/ict_gabbard_nd.jpeg" alt="" /></a>
-									<p>Rep. Tulsi Gabbard, D-Hawaii, traveled to North Dakota before taking the stage in Detroit for the Second Democratic debate. It was the 38-year-old’s second visit.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="image fit"><img src="images/work_images/ict_sestak.jpeg" alt="" /></a>
+									<p>Former congressman Joe Sestak from Pennsylvania started off the second day of the Frank LaMere Presidential Forum. </p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 
-								<!-- ICT, Aaron Yazzie -->
+								<!-- ICT, Julián Castro -->
 								<article>
 									<header>
-										<span class="date">July 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/nasa-s-next-generation-of-natives-after-the-moon-it-s-the-2020-mission-to-mars-WAoQ6RMKmkCZx-hpSZVVhw/"  target="_blank">NASA's next generation of Natives: After the moon it's the 2020 Mission to Mars</a></h3>
+										<span class="date">August 20, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank">Julián Castro receives Native endorsements— he is an ‘unwavering leader’</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/nasa-s-next-generation-of-natives-after-the-moon-it-s-the-2020-mission-to-mars-WAoQ6RMKmkCZx-hpSZVVhw/"  target="_blank" class="image fit"><img src="images/work_images/ict_ayazzie.jpg" alt="" /></a>
-									<p>Aaron Yazzie sometimes felt like he was in a “little bubble" growing up on the Navajo Nation reservation in Holbrook, Arizona.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="image fit"><img src="images/work_images/ict_castro.jpg" alt="" /></a>
+									<p>Hours before the Julián Castro takes the stage at the Frank LaMere Presidential Forum, Indian Country Today learned his campaign has four new endorsements from Native leaders.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/nasa-s-next-generation-of-natives-after-the-moon-it-s-the-2020-mission-to-mars-WAoQ6RMKmkCZx-hpSZVVhw/"  target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 
-								<!-- Daily, Kanaka Maoli -->
+								<!-- ICT, Steve Bullock -->
 								<article>
 									<header>
-										<span class="date">July 19, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/kanaka-maoli-do-not-mistake-our-aloha-for-weakness-c0x8lkRr90miH95TkZcfZA/"  target="_blank">Kanaka Maoli: 'Do not mistake our aloha for weakness'</a></h3>
+										<span class="date">August 20, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank">Steve Bullock cites previous experience working with Indian Country</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/kanaka-maoli-do-not-mistake-our-aloha-for-weakness-c0x8lkRr90miH95TkZcfZA/"  target="_blank" class="image fit"><img src="images/work_images/ict_mauna.jpg" alt="" /></a>
-									<p>Kanaka Maoli, Native Hawaiians, are peacefully protesting the construction of a Thirty Meter Telescope on their sacred site, Mauna Kea.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="image fit"><img src="images/work_images/ict_bullock.jpg" alt="" /></a>
+									<p>Montana Governor Steve Bullock was the fourth and final candidate to speak on Monday at the Frank LaMere Presidential Forum in Sioux City, Iowa.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/kanaka-maoli-do-not-mistake-our-aloha-for-weakness-c0x8lkRr90miH95TkZcfZA/"  target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 
-								<!-- ICT, Super Bowl Youth -->
+								<!-- ICT, Marianne Williamson -->
 								<article>
 									<header>
-										<span class="date">July 4, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/the-super-bowl-of-native-youth-gatherings-kicks-off-in-sunny-florida-CxHUjBPNaESs5LcvkjCymQ/"  target="_blank">The ‘Super Bowl of Native youth gatherings’ kicks off in sunny Florida</a></h3>
+										<span class="date">August 19, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank">Marianne Williamson: 'I will apologize'</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/the-super-bowl-of-native-youth-gatherings-kicks-off-in-sunny-florida-CxHUjBPNaESs5LcvkjCymQ/"  target="_blank" class="image fit"><img src="images/work_images/ict_sb_youth.jpg" alt="" /></a>
-									<p>More than 2,000 Native youth from across Indian Country have packed their bags and arrived in Orlando. They will attend United National Indian Tribal Youth organization’s signature event, their annual conference, for the next five days.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="image fit"><img src="images/work_images/ict_marianne.jpg" alt="" /></a>
+									<p>Author Marianne Williamson took the stage, escorted by a tribal elder and youth, as she was introduced by Ruth Buffalo, the first Native woman in the North Dakota State Legislature.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/the-super-bowl-of-native-youth-gatherings-kicks-off-in-sunny-florida-CxHUjBPNaESs5LcvkjCymQ/"  target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 
-								<!-- ICT, San Carlos Apache -->
+								<!-- ICT, LaDonna Harris -->
 								<article>
 									<header>
-										<span class="date">July 3, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/phoenix-health-facility-where-san-carlos-apache-woman-was-impregnated-faces-multiple-investigations--NWkQIk15kGIinesenFJAg/"  target="_blank">Phoenix health facility where San Carlos Apache woman was impregnated faces multiple investigations</a></h3>
+										<span class="date">August 18, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/"  target="_blank">LaDonna Harris ‘stumbled’ into a legacy of impact</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/phoenix-health-facility-where-san-carlos-apache-woman-was-impregnated-faces-multiple-investigations--NWkQIk15kGIinesenFJAg/"  target="_blank" class="image fit"><img src="images/work_images/ict_san_carlos_apache.jpg" alt="" /></a>
-									<p>Hacienda Healthcare, a Phoenix intermediate care facility, is under investigation by the State of Arizona following two high-profile cases in the last six months. </p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/"  target="_blank" class="image fit"><img src="images/work_images/ict_ladonna.jpg" alt="" /></a>
+									<p>LaDonna Harris remembers what Washington, D.C., was like in the 1960s. Tribal leaders had to travel back and forth across town, meeting in different offices, in order to get business done with the federal government.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/phoenix-health-facility-where-san-carlos-apache-woman-was-impregnated-faces-multiple-investigations--NWkQIk15kGIinesenFJAg/"  target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
