--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@
 										<span class="date">August 20, 2019</span>
 										<h3><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank">Joe Sestak kicks off day two of the Presidential Forum</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="image fit"><img src="images/work_images/ict_sestak.jpeg" alt="" /></a>
+									<a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="image fit"><img src="images/work_images/ict_sestak.jpg" alt="" /></a>
 									<p>Former congressman Joe Sestak from Pennsylvania started off the second day of the Frank LaMere Presidential Forum. </p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="button">Full Story</a></li>
@@ -141,7 +141,7 @@
 									
 									<!-- <span class="extra">&hellip;</span> -->
 									<a href="work3.html" class="page">3</a>
-									<!-- <a href="#" class="page">8</a> -->
+									<a href="work4.html" class="page">4</a>
 									<!-- <a href="#" class="page">9</a> -->
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work2.html" class="next">Next</a>
