new stories added and rearranged images

--- a/work.html
+++ b/work.html
@@ -53,11 +53,63 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!--  -->
+								<!-- <article>
+									<header>
+										<span class="date">, 2019</span>
+										<h3><a href=" ">Nationwide ‘Take Back The Night’ event brings awareness to sexual assault on college campuses</a></h3>
+									</header>
+									<a href=" " class="image fit"><img src="images/ict_.jpg" alt="" /></a>
+									<p>Students, faculty and community members gathered Tuesday evening to rally, march and speak out about sexual assault on college campuses for the national Take Back The Night event.</p>
+									<ul class="actions special">
+										<li><a href=" " class="button">Full Story</a></li>
+									</ul>
+								</article> -->
+
+								<!-- ICT, Castro Gracias -->
+								<article>
+									<header>
+										<span class="date">September 6, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank">The university experience wasn’t ‘made for Native students like me’</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank" class="image fit"><img src="images/work_images/ict_native_uni.jpg" alt="" /></a>
+									<p>Lane Yazzie, Diné, is a fifth-year student at San Diego State University concentrating on interdisciplinary studies. Yazzie found the transition from high school to college as difficult.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- ICT, Booker, Climate Resistance -->
+								<article>
+									<header>
+										<span class="date">September 6, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank">Senator calls Indigenous communities ‘the center’ of a climate resilience</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank" class="image fit"><img src="images/work_images/ict_climate_resistance.jpg" alt="" /></a>
+									<p>Presidential candidate Cory Booker says Indian Country is a critical part of his $3 trillion climate and economic justice plan.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- ICT, Race Across the Sky -->
+								<article>
+									<header>
+										<span class="date">August 26, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/completing-a-100-mile-race-with-the-help-of-chinese-food-and-community-tf-td65SMkyAjx8nAOmFSw/" target="_blank">Completing a 100-mile race with the help of Chinese food and community</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/completing-a-100-mile-race-with-the-help-of-chinese-food-and-community-tf-td65SMkyAjx8nAOmFSw/" target="_blank" class="image fit"><img src="images/work_images/ict_chinese_food.jpg" alt="" /></a>
+									<p>Racers endure 100 miles of Rocky Mountain terrain while climbing 15,600 feet to the finish line by foot or bike. The “Race Across the Sky,” also known as the Leadville Race Series, challenges thousands of athletes every year.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/completing-a-100-mile-race-with-the-help-of-chinese-food-and-community-tf-td65SMkyAjx8nAOmFSw/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
 								<!-- ICT, Castro Gracias -->
 								<article>
 									<header>
 										<span class="date">August 21, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank">Julián Castro has specific plans for Indian Country & a 'gracias' for warm welcome</a></h3>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank">Julián Castro has specific plans for Indian Country & a ‘gracias’ for warm welcome</a></h3>
 									</header>
 									<a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank" class="image fit"><img src="images/work_images/ict_castro_language.jpg" alt="" /></a>
 									<p>A recurring theme of the Frank LaMere Native American Presidential Forum was language. Indian Country listened as panelists spoke various languages before they asked questions to White House hopefuls.</p>
@@ -89,45 +141,6 @@
 									<p>Hours before the Julián Castro takes the stage at the Frank LaMere Presidential Forum, Indian Country Today learned his campaign has four new endorsements from Native leaders.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Steve Bullock -->
-								<article>
-									<header>
-										<span class="date">August 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank">Steve Bullock cites previous experience working with Indian Country</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="image fit"><img src="images/work_images/ict_bullock.jpg" alt="" /></a>
-									<p>Montana Governor Steve Bullock was the fourth and final candidate to speak on Monday at the Frank LaMere Presidential Forum in Sioux City, Iowa.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Marianne Williamson -->
-								<article>
-									<header>
-										<span class="date">August 19, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank">Marianne Williamson: 'I will apologize'</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="image fit"><img src="images/work_images/ict_marianne.jpg" alt="" /></a>
-									<p>Author Marianne Williamson took the stage, escorted by a tribal elder and youth, as she was introduced by Ruth Buffalo, the first Native woman in the North Dakota State Legislature.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, LaDonna Harris -->
-								<article>
-									<header>
-										<span class="date">August 18, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/"  target="_blank">LaDonna Harris ‘stumbled’ into a legacy of impact</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/"  target="_blank" class="image fit"><img src="images/work_images/ict_ladonna.jpg" alt="" /></a>
-									<p>LaDonna Harris remembers what Washington, D.C., was like in the 1960s. Tribal leaders had to travel back and forth across town, meeting in different offices, in order to get business done with the federal government.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
