--- a/work2.html
+++ b/work2.html
@@ -53,6 +53,45 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!-- ICT, Steve Bullock -->
+								<article>
+									<header>
+										<span class="date">August 20, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank">Steve Bullock cites previous experience working with Indian Country</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="image fit"><img src="images/work_images/ict_bullock.jpg" alt="" /></a>
+									<p>Montana Governor Steve Bullock was the fourth and final candidate to speak on Monday at the Frank LaMere Presidential Forum in Sioux City, Iowa.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- ICT, Marianne Williamson -->
+								<article>
+									<header>
+										<span class="date">August 19, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank">Marianne Williamson: ‘I will apologize’</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="image fit"><img src="images/work_images/ict_marianne.jpg" alt="" /></a>
+									<p>Author Marianne Williamson took the stage, escorted by a tribal elder and youth, as she was introduced by Ruth Buffalo, the first Native woman in the North Dakota State Legislature.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- ICT, LaDonna Harris -->
+								<article>
+									<header>
+										<span class="date">August 18, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/"  target="_blank">LaDonna Harris ‘stumbled’ into a legacy of impact</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/"  target="_blank" class="image fit"><img src="images/work_images/ict_ladonna.jpg" alt="" /></a>
+									<p>LaDonna Harris remembers what Washington, D.C., was like in the 1960s. Tribal leaders had to travel back and forth across town, meeting in different offices, in order to get business done with the federal government.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
 								<!-- ICT, Iowa Powwow -->
 								<article>
 									<header>
@@ -70,7 +109,7 @@
 								<article>
 									<header>
 										<span class="date">August 2, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank">Tulsi Gabbard says Americans need to address 'broken treaties and broken promises'</a></h3>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank">Tulsi Gabbard says Americans need to address ‘broken treaties and broken promises’</a></h3>
 									</header>
 									<a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank" class="image fit"><img src="images/work_images/ict_gabbard_nd.jpeg" alt="" /></a>
 									<p>Rep. Tulsi Gabbard, D-Hawaii, traveled to North Dakota before taking the stage in Detroit for the Second Democratic debate. It was the 38-year-old’s second visit.</p>
@@ -89,45 +128,6 @@
 									<p>Aaron Yazzie sometimes felt like he was in a “little bubble" growing up on the Navajo Nation reservation in Holbrook, Arizona.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/nasa-s-next-generation-of-natives-after-the-moon-it-s-the-2020-mission-to-mars-WAoQ6RMKmkCZx-hpSZVVhw/"  target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- Daily, Kanaka Maoli -->
-								<article>
-									<header>
-										<span class="date">July 19, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/kanaka-maoli-do-not-mistake-our-aloha-for-weakness-c0x8lkRr90miH95TkZcfZA/"  target="_blank">Kanaka Maoli: 'Do not mistake our aloha for weakness'</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/kanaka-maoli-do-not-mistake-our-aloha-for-weakness-c0x8lkRr90miH95TkZcfZA/"  target="_blank" class="image fit"><img src="images/work_images/ict_mauna.jpg" alt="" /></a>
-									<p>Kanaka Maoli, Native Hawaiians, are peacefully protesting the construction of a Thirty Meter Telescope on their sacred site, Mauna Kea.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/kanaka-maoli-do-not-mistake-our-aloha-for-weakness-c0x8lkRr90miH95TkZcfZA/"  target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Super Bowl Youth -->
-								<article>
-									<header>
-										<span class="date">July 4, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/the-super-bowl-of-native-youth-gatherings-kicks-off-in-sunny-florida-CxHUjBPNaESs5LcvkjCymQ/"  target="_blank">The ‘Super Bowl of Native youth gatherings’ kicks off in sunny Florida</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/the-super-bowl-of-native-youth-gatherings-kicks-off-in-sunny-florida-CxHUjBPNaESs5LcvkjCymQ/"  target="_blank" class="image fit"><img src="images/work_images/ict_sb_youth.jpg" alt="" /></a>
-									<p>More than 2,000 Native youth from across Indian Country have packed their bags and arrived in Orlando. They will attend United National Indian Tribal Youth organization’s signature event, their annual conference, for the next five days.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/the-super-bowl-of-native-youth-gatherings-kicks-off-in-sunny-florida-CxHUjBPNaESs5LcvkjCymQ/"  target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, San Carlos Apache -->
-								<article>
-									<header>
-										<span class="date">July 3, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/phoenix-health-facility-where-san-carlos-apache-woman-was-impregnated-faces-multiple-investigations--NWkQIk15kGIinesenFJAg/"  target="_blank">Phoenix health facility where San Carlos Apache woman was impregnated faces multiple investigations</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/phoenix-health-facility-where-san-carlos-apache-woman-was-impregnated-faces-multiple-investigations--NWkQIk15kGIinesenFJAg/"  target="_blank" class="image fit"><img src="images/work_images/ict_san_carlos_apache.jpg" alt="" /></a>
-									<p>Hacienda Healthcare, a Phoenix intermediate care facility, is under investigation by the State of Arizona following two high-profile cases in the last six months. </p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/phoenix-health-facility-where-san-carlos-apache-woman-was-impregnated-faces-multiple-investigations--NWkQIk15kGIinesenFJAg/"  target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
